--- a/index.html
+++ b/index.html
@@ -25,21 +25,24 @@
       margin-bottom: 10px;
       padding: 10px;
       background: #f9f9f9;
+      display: flex;
+      flex-direction: column;
     }
-    #message-box div {
-      margin: 5px 0;
-    }
-    .message {
+    #message-box .message {
+      max-width: 70%;
+      margin: 5px;
       padding: 8px;
       border-radius: 5px;
+      word-wrap: break-word;
     }
-    .sent {
+    #message-box .sent {
       background: #d1f8d1;
-      text-align: right;
+      align-self: flex-end;
     }
-    .received {
-      background: #f0f0f0;
-      text-align: left;
+    #message-box .received {
+      background: #e0e0e0;
+      color: #333;
+      align-self: flex-start;
     }
     #input-area {
       display: flex;
@@ -77,19 +80,31 @@
     const messageInput = document.getElementById('message-input');
     const sendBtn = document.getElementById('send-btn');
 
-    // Mock backend connection (replace with WebSocket or API later)
-    const socket = new WebSocket('wss://example.com'); // Replace with actual server
+    // Simulated connection to a backend (replace with WebSocket in production)
+    const mockSocket = {
+      onmessage: null,
+      send: function (msg) {
+        // Simulate receiving a message from another user
+        setTimeout(() => {
+          if (this.onmessage) {
+            this.onmessage({ data: `Echo: ${msg}` });
+          }
+        }, 1000); // Simulated delay
+      }
+    };
 
+    // Add event listener for the send button
     sendBtn.addEventListener('click', () => {
       const message = messageInput.value.trim();
       if (message) {
-        socket.send(message); // Send to the server
-        addMessage(message, 'sent');
+        addMessage(message, 'sent'); // Add the user's message
+        mockSocket.send(message); // Simulate sending the message to the server
         messageInput.value = '';
       }
     });
 
-    socket.onmessage = (event) => {
+    // Simulate receiving a message from another user
+    mockSocket.onmessage = (event) => {
       addMessage(event.data, 'received');
     };
 
@@ -98,8 +113,5 @@
       messageDiv.className = `message ${type}`;
       messageDiv.textContent = text;
       messageBox.appendChild(messageDiv);
-      messageBox.scrollTop = messageBox.scrollHeight; // Scroll to the bottom
-    }
-  </script>
-</body>
-</html>
+      messageBox.scrollTop = message
+      
