--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       align-self: flex-end;
     }
     #message-box .received {
-      background: #e0e0e0;
-      color: #333;
+      background: #ffcccc;
       align-self: flex-start;
+      color: #660000;
     }
     #input-area {
       display: flex;
@@ -80,38 +80,51 @@
     const messageInput = document.getElementById('message-input');
     const sendBtn = document.getElementById('send-btn');
 
-    // Simulated connection to a backend (replace with WebSocket in production)
+    // Mock backend (replace with actual server in production)
     const mockSocket = {
       onmessage: null,
       send: function (msg) {
-        // Simulate receiving a message from another user
         setTimeout(() => {
           if (this.onmessage) {
-            this.onmessage({ data: `Echo: ${msg}` });
+            this.onmessage({ data: `Reply: ${msg}` });
           }
-        }, 1000); // Simulated delay
+        }, 1000);
       }
     };
 
-    // Add event listener for the send button
-    sendBtn.addEventListener('click', () => {
+    // Function to handle sending messages
+    function sendMessage() {
       const message = messageInput.value.trim();
       if (message) {
         addMessage(message, 'sent'); // Add the user's message
         mockSocket.send(message); // Simulate sending the message to the server
         messageInput.value = '';
       }
+    }
+
+    // Add event listener for the send button
+    sendBtn.addEventListener('click', sendMessage);
+
+    // Add event listener for the "Enter" key
+    messageInput.addEventListener('keydown', (event) => {
+      if (event.key === 'Enter') {
+        sendMessage();
+      }
     });
 
-    // Simulate receiving a message from another user
+    // Simulate receiving a message
     mockSocket.onmessage = (event) => {
       addMessage(event.data, 'received');
     };
 
+    // Function to add a message to the chat box
     function addMessage(text, type) {
       const messageDiv = document.createElement('div');
       messageDiv.className = `message ${type}`;
       messageDiv.textContent = text;
       messageBox.appendChild(messageDiv);
-      messageBox.scrollTop = message
-      
+      messageBox.scrollTop = messageBox.scrollHeight; // Scroll to the bottom
+    }
+  </script>
+</body>
+</html>
